# diagramide

./: .gitignore  .lldbinit  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  NOTICE  README.md  Rakefile  filters.py  progress.md
.githooks/: pre-commit
.github/workflows/: ci.yaml  nightly_v2.rb  nightly_v2.yml  release.yml
assets/docs/: pikchr_grammar_full.md  pikchr_keywords.txt
crates/diagramide/: Cargo.toml  FEATURES.md  NOTES.md  README.md
crates/diagramide/assets/syntaxes/: pikchr.sublime-syntax
crates/diagramide/src/: editor.rs  help.rs  icons.rs  image.rs  lib.rs  logger.rs  main.rs  menubar.rs  message_handler.rs  mini_window.rs  modal.rs  mruby.rs  mruby_editor.rs  pikchr_editor.rs  plain_text_editor.rs  prolog_editor.rs  sender_ext.rs  state.rs  state_serialize.rs  svg.rs  tcl.rs  tcl_editor.rs  text_highlighting.rs  theme.rs
crates/diagramide/tests/: basic.rs
crates/pikchr_egui/: Cargo.toml  workspace.json  workspace.jsonn
crates/pikchr_egui/assets/syntaxes/: prolog.sublime-syntax
crates/pikchr_egui/src/: editor.rs  identifiers.rs  image.rs  lib.rs  main.rs  menubar.rs  message_handler.rs  mini_window.rs  modal.rs  pikchr_editor.rs  prolog_editor.rs  response_ext.rs  state.rs  state_serialize.rs  sub_window.rs  svg.rs  tcl.rs  tcl_editor.rs  text_highlighting.rs
crates/pikchr_egui/tests/: basic.rs
crates/pikchr_pl/: Cargo.toml  build.rs
crates/pikchr_pl/src/: editor_actions_handler.rs  editor_state.rs  file_watcher.rs  main.rs  messages.rs  save_state.rs  text_highlighting.rs  undo.rs
crates/pikchr_pl/src/keybindings/: key_ext.rs
crates/pikchr_pro/: Cargo.toml  build.rs
crates/pikchr_pro/src/: pikchr.rs  prolog.rs  types.rs
crates/pikchr_pro/src/prolog/engine/: trealla.rs
crates/trealla_wasm/: Cargo.toml  build.rs
crates/trealla_wasm/src/: lib.rs
src/: editor.rs  help.rs  identifiers.rs  image.rs  lib.rs  logger.rs  main.rs  menubar.rs  message_handler.rs  mini_window.rs  modal.rs  mruby.rs  pikchr_editor.rs  plain_text_editor.rs  prolog_editor.rs  response_ext.rs  state.rs  state_serialize.rs  svg.rs  tcl.rs  tcl_editor.rs
src/help/: grammar.rs  guide.rs
tests/: basic.rs
