[package]
name = "diagramide"
version = "0.1.0"
edition.workspace = true
license-file = "LICENSE"
include = ["LICENSE", "NOTICE", "src/**/*", "assets/**/*"]

[features]
profile = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
eframe = { version = "0.33.3", features = ["persistence", "wgpu", "accesskit", "wayland", "x11", "default_fonts"] , default-features = false}
egui_extras = { version = "0.33.3", features = ["svg", "syntect"] }
catppuccin-egui = { version = "5.7.0", features = ["egui33"], default-features = false }
image = { workspace = true, features = ["png"] }
pikchr_pro = { path = "crates/pikchr_pro" }
parking_lot = "0.12.5"
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
resvg = "0.45.1"
tiny-skia = "0.11.4"
syntect = "5.3.0"
wgpu = {version = "27.0.1", features = ["vulkan", "metal", "dx12", "wgsl"] }
serde = { workspace = true, features = ["rc"] }
paste = "1.0.15"
bytemuck = "1.24.0"
png = "0.18.0"
ron = "0.11.0"
rand = "0.9.2"
rfd = "0.15.4"
serde_json = "1.0.149"
json5 = "0.4.1"
tcl-sys = { version = "0.2.0-axk-fork", path = "vendor/tcltk-rs/tcl-sys" }
libloading = "0.9.0"
tokio-util = { version = "0.7.18", features = ["time"] }
tokio-stream = "0.1.18"
slog = { version = "2.8.2", features = ["nested-values"] }
slog-async = { version = "2.8.0", features = ["nested-values"] }
slog-json = { version = "2.6.1", features = ["nested-values"] }
slog_derive = "0.2.0"
slog-term = { version = "2.9.2", features = ["nested-values"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.1"
pulldown-cmark = { version = "0.13", default-features = false }
tracing = "0.1.44"
tracing-subscriber = {version =  "0.3.22", features = ["env-filter", "registry"] }
tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.4", optional = true }

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["eframe", "wgpu"] }

[package.metadata.bundle]
name = "DiagramIDE"
identifier = "sh.axk.diagramide"
icon = ["icon.svg"]
version = "1.0.0"
short_description = "Pikchr powered Diagram Editor"

[workspace]
members = [
  "crates/pikchr_pl",
  "crates/pikchr_pro",
  "crates/trealla_wasm"
]
exclude = ["vendor/tcltk-rs"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["svg", "highlighter", "tokio", "debug", "image", "advanced"] }
tokio = { version = "1.49.0", features = [], default-features = true }
wasmtime = { version = "40.0.2", features = ["all-arch"], default-features = true }
wasmtime-wasi = "40.0.2"
cc = "1.0"
thiserror = "2.0.18"
rfd = "0.17.2"
image = "0.25.9"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
postcard = "1.1.3"

[profile.dev]
debug = 0
split-debuginfo = "packed" # Recommended for macOS
strip = "none"
