[package]
name = "diagramide"
version = "0.1.0"
edition.workspace = true
license-file = "LICENSE"
include = ["LICENSE", "NOTICE", "src/**/*"]

[features]
profile = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
eframe = { version = "0.33.3", features = ["persistence", "wgpu", "accesskit", "wayland", "x11", "default_fonts"] , default-features = false}
egui_extras = { version = "0.33.3", features = ["svg", "syntect"] }
catppuccin-egui = { version = "5.7.0", features = ["egui33"], default-features = false }
image = { workspace = true, features = ["png"] }
pikchr_pro = { path = "../pikchr_pro" }
parking_lot = "0.12.5"
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
resvg = "0.45.1"
tiny-skia = "0.11.4"
syntect = "5.3.0"
wgpu = {version = "27.0.1", features = ["vulkan", "metal", "dx12", "wgsl"] }
serde = { workspace = true, features = ["rc"] }
paste = "1.0.15"
bytemuck = "1.24.0"
png = "0.18.0"
ron = "0.11.0"
rand = "0.9.2"
serde_json = "1.0.149"
tcl-sys = { version = "0.2.0-axk-fork", path = "../../vendor/tcltk-rs/tcl-sys" }
libloading = "0.9.0"
tokio-util = { version = "0.7.18", features = ["time"] }
tokio-stream = "0.1.18"
slog = { version = "2.8.2", features = ["nested-values"] }
slog-async = { version = "2.8.0", features = ["nested-values"] }
slog-json = { version = "2.6.1", features = ["nested-values"] }
slog_derive = "0.2.0"
slog-term = { version = "2.9.2", features = ["nested-values"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.1"
tracing = "0.1.44"
tracing-subscriber = {version =  "0.3.22", features = ["env-filter", "registry"] }
tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.4", optional = true }

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["eframe", "snapshot", "wgpu"] }
