[package]
name = "pikchr_egui"
version.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg"] }
image = { workspace = true, features = ["png"] }
pikchr_pro = { path = "../pikchr_pro" }
parking_lot = "0.12.5"
tokio.workspace = true
resvg = "0.46.0"
tiny-skia = "0.11.4"
catppuccin-egui = { version = "5.7.0", features = ["egui33"], default-features = false }
